--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "spotify",
     "scheme": "spotify",
     "version": "1.0.0",
+    "newArchEnabled": true,
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
