--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
+    "@expo/vector-icons": "^14.0.2",
+    "expo": "^52.0.0",
+    "expo-constants": "~17.0.2",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.2",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.20",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~7.1.2",
+    "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-native": "^4.1.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
