--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "^4.5.5",
     "expo": "^52.0.0",
     "expo-constants": "~17.0.2",
     "expo-linking": "~7.0.2",
@@ -24,7 +25,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "expo-av": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
